--- a/health-indicators/pyproject.toml
+++ b/health-indicators/pyproject.toml
@@ -1,8 +1,7 @@
 [tool.poetry]
 name = "health-indicators"
 version = "0.1.0"
-description = "Unified library of Health indices indicators attempt to describe and monitor a 
-population's health status. eg BMI BAI "
+description = "Unified library of Health indices indicators attempt to describe and monitor a population's health status. eg BMI BAI "
 authors = ["babu muraya <babumuraya@gmail.com>"]
 readme = "README.md"
 
